@@ -1,4 +1,0 @@
-# tmpfs max limit size for /dev/shm.  You can specify tmpfs mount option
-# format using this variable.  In default, it doesn't specify any variables,
-# and kernel automatically set valid upper limit.
-TMPFS_SIZE=
