@@ -1,5 +1,15 @@
 #!/bin/sh
 #
+### BEGIN INIT INFO
+# Provides:          nscd
+# Required-Start:    $syslog
+# Required-Stop:     $syslog
+# Should-Start:      $network slapd $named
+# Should-Stop:       $network slapd $named
+# Default-Start:     2 3 4 5
+# Default-Stop:      S 0 1 6
+### END INIT INFO
+#
 # nscd:		Starts the Name Service Cache Daemon
 #
 # description:  This is a daemon which handles passwd and group lookups
