@@ -5,9 +5,12 @@ glibc (2.3.5-8) unstable; urgency=low
     (Closes: #335821).
   * Also restart saslauthd at upgrades, from Philipp Hug (Closes: #334101).
   * Merge .eh_frame terminator fix, by Richard Sandiford (Closes: #334112).
-  * Merge armeb support, by Lennert Buytenhek (Closes: #335116).
+  * Merge armeb support, from Lennert Buytenhek (Closes: #335116).
+  * Add LSB headers to glibc.sh and nscd init scripts, from Petter
+    Reinholdtsen (Closes: #335308, #335343).
+  * Remove obsolete mountkernfs, tmpfs, and devpts.sh files from debian/.
 
- -- Daniel Jacobowitz <dan@debian.org>  Sat, 12 Nov 2005 18:29:36 -0500
+ -- Daniel Jacobowitz <dan@debian.org>  Sat, 12 Nov 2005 18:39:39 -0500
 
 glibc (2.3.5-7) unstable; urgency=low
 
